Update deployment configurations